<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/secure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/secure_connect" 
          android:showAsAction="always" android:visible="false"/>
    
    <item android:id="@+id/insecure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/insecure_connect" 
          android:showAsAction="always" android:visible="false"/>
    
    <item android:id="@+id/discoverable"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/discoverable" 
          android:showAsAction="always" android:visible="false"/>    
    
    <item android:id="@+id/bluetooth_connection_button"
          android:title="@string/connection"
          android:icon="@drawable/bluetooth_not_connected"
          android:showAsAction="always" />

    <item android:id="@+id/score_view"
          android:title="@string/referee_view"
          android:icon="@drawable/referee_view"
          android:showAsAction="always" />

</menu>